<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.myanmar.tmn.ted.activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacy"
        android:orderInCategory="100"
        android:title="@string/action_policy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="never" />
</menu>
