<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="185dp"
    android:layout_height="170dp"
    android:layout_margin="4dp">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="185dp"
        android:layout_height="170dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_news_dummy" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="90dp"
        android:text="@string/playlist_title"
        android:textColor="@color/white_full"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_talks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_author"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:maxLines="3"
        android:text="@string/playlist_talk"
        android:textColor="@color/white_full"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <View
        android:id="@+id/h_separator"
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:layout_below="@id/tv_author"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/tv_talks"
        android:background="#000" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_talks"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="24dp"
        android:layout_toRightOf="@id/tv_talks"
        android:text="@string/time"
        android:textSize="16sp"
        android:textColor="@color/white_full" />

    <ImageView
        android:id="@+id/vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/iv_background"
        android:layout_marginRight="4dp"
        android:layout_marginTop="120dp"
        android:layout_alignBottom="@id/tv_time"
        android:src="@drawable/ic_more_vert_white_24dp" />

</RelativeLayout>