<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/img_news_dummy" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="100dp"
            android:text="@string/talks_author"
            android:textSize="16sp"
            android:textColor="@color/white_full"/>

        <TextView
            android:id="@+id/tv_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_author"
            android:layout_below="@id/tv_author"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="20dp"
            android:maxLines="3"
            android:text="@string/talks_topic"
            android:textSize="20sp"
            android:textColor="@color/white_full"/>

        <ImageView
            android:id="@+id/vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_alignRight="@id/iv_background"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_more_vert_white_24dp"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_topic"
            android:layout_alignRight="@id/iv_background"
            android:layout_marginRight="24dp"
            android:text="@string/time"
            android:textColor="@color/white_full"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>

